@@ -3,6 +3,7 @@
 = 5.4.1 =
 * WordPress 6.9 compatible.
 * WooCommerce 10.4 compatible.
+* Fixed incorrect function call parameters. [#127](https://github.com/itthinx/affiliates/pull/127)
 
 = 5.4.0 =
 * WordPress 6.9 compatible.
